# chisel_rps

./: .gitignore  .gitmodules  README.md  build.sc  instant.py  postElaborating.py
project_foo/src/: Elaborate.scala  Example.scala  QDMATop.scala
rps/src/: BSComponents.scala  Bench.scala  BenchNoNet.scala  BlockServer.scala  CSReqHandler.scala  ChunckServer.scala  Client.scala  ClientAndChunckServer.scala  ClientReqHandler.scala  Compressor.scala  Elaborate.scala  HBMChannelOperator.scala  Interface.scala  QATBench.scala  QDMAControl.scala  RPSClientTop.scala  RPSCompressTop.scala  RPSDummyTop.scala  RPSTest.scala  RPSTop.scala
rps/sv/: RPS128.xdc  RPSClientTop.xdc  RPSCompressTop.xdc  RPSDummyTop.xdc  RPSTop.xdc
rps/tb/: tb_Accelerator.sv  tb_BenchNetSim.sv  tb_BlockServer.sv  tb_CSReqHandler.sv  tb_ChannelReader.sv  tb_ChannelWriter.sv  tb_ClientReqHandler.sv  tb_CompressorHBM.sv  tb_CreditQ.sv  tb_HBMCompress.sv  tb_ProducerConsumer.sv  tb_TestPC.sv
sw/: CMakeLists.txt  check_status.cpp  cmd.txt  gen.h.in  rps.cpp
sw/src/: debug.cpp  debug.hpp  fpga_control.cpp  fpga_control.hpp  util.cpp  util.hpp
